Fixed goblin leader having autoattack off
Finally fixed resource UI not showing the proper starting value

--- a/content/dota_addons/pmp/panorama/styles/custom_game/resource.css
+++ b/content/dota_addons/pmp/panorama/styles/custom_game/resource.css
@@ -4,12 +4,6 @@
     height: 100%;
 }
 
-.Hidden 
-{ 
-    visibility: collapse;
-    opacity: 0;
-}
-
 .Right
 {
     horizontal-align: right;
